feat(mix4): 增加四合一接口
